crates/cfd2_macros/tests/ui/port_set_fail/missing_wgsl.stderr
error: PortSet derive requires at least one field with #[param], #[field], or #[buffer] attribute
 --> tests/ui/port_set_fail/missing_wgsl.rs:7:12
  |
7 | pub struct TestParams {
  |            ^^^^^^^^^^
